# scrapemed

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml  test-scrapemed.yml
data/: test_text_vis.gv
docs/: conf.py
docs/source/: conf.py  index.rst  modules.rst  scrapemed.rst
downloads/: 7067710_element_tree_clean.gv  entrez_download_PMCID=7067710_json.txt
examples/: neurosurgery-example.ipynb  paper-example.ipynb  paperset-example.ipynb
examples/data/: entrez_download_PMCID=7067710.xml
notebooks/: entrez-parser-testing.ipynb  entrez-parser-testing.py  fix-table-parsing.ipynb  html-cleaning.ipynb  nohup.out  original-scraping.ipynb  package-org.ipynb  paper-example.ipynb  paper-testing-old.ipynb  paper-testing.ipynb  paperset-example.ipynb  parse-testing.ipynb  scrape-testing.ipynb  testing.ipynb  text-html-splitting.ipynb  vectorize-papers.ipynb  workspace.ipynb
notebooks/data/: .100_drug_papers_entrez_parser.txt.icloud  7067710_element_tree_clean.gv  dtd_list.txt  dtd_set.txt  entrez_download_PMCID=1086993.xml  entrez_download_PMCID=2097352.xml  entrez_download_PMCID=2832672.xml  entrez_download_PMCID=2848880.xml  entrez_download_PMCID=3261356.xml  entrez_download_PMCID=4293762.xml  entrez_download_PMCID=5173686.xml  entrez_download_PMCID=5682655.xml  entrez_download_PMCID=7067711.xml  entrez_download_PMCID=7067712.xml  entrez_download_PMCID=7210167.xml  entrez_download_PMCID=7815048.xml  entrez_download_PMCID=8460637.xml  entrez_download_PMCID=8767368.xml  entrez_download_PMCID=9872380.xml
scrapemed/: _clean.py  _morehtml.py  _parse.py  _text.py  _validate.py  dataset.py  paper.py  paperSet.py  scrape.py  trees.py  utils.py
scrapemed/data/: supported_tag_list.txt  supported_xml_html.csv  supported_xml_html.json  tag_descriptions.csv
scrapemed/tests/: requirements.txt  test_clean.py  (+11 more)
test_setup_scrapemed/: pyvenv.cfg
(+13 files in other folders)
