[project]
name = "scrapemed"
version = "1.0.2"
description = "Data Scraping for PubMed Central."
authors = [
    {name = "Daniel Frees", email = "danielfrees@g.ucla.edu"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.11"

[build-system]
requires = [
    "setuptools>=66", 
    "wheel>=0.38", 
    "scikit-build>=0.17", 
    "cmake>=3.26", 
    "ninja"
    ]
build-backend = "setuptools.build_meta"    

[project.urls]
"Homepage" = "https://github.com/danielfrees/scrapemed/"
"Bug Tracker" = "https://github.com/danielfrees/scrapemed/issues"



    
        