[project]
name = "scrapemed"
version = "1.1.3"
description = "Data Scraping for PubMed Central."
authors = [
    {name = "Daniel Frees", email = "danielfrees@g.ucla.edu"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"

dependencies = [
    "biopython>=1.78",
    "graphviz>=0.20.1",
    "lxml==4.9.0",
    "pandas>=1.5.2",
    "requests-html>=0.10.0",
    "sqlalchemy>=1.4.39",
    "beautifulsoup4>=4.11",
    "html5lib>=1.1",
    "jinja2",
    "python-dotenv",
    "chromadb",
    "langchain",
    "uuid",
    "matplotlib",
    "wordcloud",
]

[build-system]
requires = [
    "setuptools>=66",
    "wheel>=0.38",
    "scikit-build>=0.17",
    "cmake>=3.26",
    "ninja"
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/danielfrees/scrapemed/"
"Bug Tracke"  = "https://github.com/danielfrees/scrapemed/issues"

[tool.setuptools]
packages = ["scrapemed"]
package-dir = { scrapemed = "scrapemed" }
package-data = { scrapemed = ["data/DTDs/*"] }
include-package-data = true

